<resources>
    <string name="app_name">Responsi1MobileH1D023009</string>
    <string name="bg1">PROFILE A.C. Pisa</string>
    <string name="bg1isi">A.C. Pisa 1909 adalah klub sepak bola Italia yang berbasis di Pisa, yang saat ini berkompetisi di Serie B. Stadion kandangnya adalah Cetilar® Arena (sebelumnya Arena Garibaldi) dengan kapasitas 12.508 kursi. Direktur pelaksana klub adalah Alberto Gilardino, yang menjabat sejak 1 Juli 2025, sementara kepemilikan klub berada di bawah Alexander Knaster.
Nama lengkap: Pisa Sporting Club
Liga saat ini: Serie B
Stadion: Cetilar® Arena (sebelumnya Arena Garibaldi – Stadio Romeo Anconetani)
Kapasitas stadion: 12.508 kursi
Pelatih (Manager): Alberto Gilardino
Direktur Olahraga (Sporting Director): Davide Vaira
Pemilik: Alexander Knaster</string>
    <string name="bg2">1909-1921</string>
    <string name="bg2sub">From the origins to the championship final</string>
    <string name="bg2isi">Football in Pisa made its debut in Piazza San Paolo in Ripa d’Arno, where some boys began playing with a ball made of rags and goals created with coats. Shortly thereafter, on 9 April 1909, the same young students founded the Pisa Sporting Club.
The club colours, initially white-red of the city banner, became black-blue the following year, on the proposal of the secretary-player Ferruccio Giovannini. Meanwhile, other football clubs had been founded in the city and on 28 January 1912, in an epic clash between the Pisa Sporting Club and the Alfea Football Club, it was the first team to impose itself and earn the honor of representing the city of Pisa. The young Nerazzurri boys began to tread the fields of Tuscany, winning the regional title in the 1914-15 championship, just in time for the war break. The post-war period was characterized by the inauguration of the new Arena Garibaldi pitch (26 October 1919) and the hiring of a Hungarian coach, József Ging, who was the first to bring high-level football skills to the city. Pisa, in 1921, came close to winning a sensational scudetto, after winning the Tuscan Cup and the play-off for the title of central-southern champion, in Bologna, winning 1-0 against their cousins from Livorno. The final for the Italian title was played on 24 July 1921 in Turin, but a sensational performance by the Nerazzurri was not enough: Pro Vercelli beat Pisa 2-1, taking advantage of the field factor, a very unfavorable direction of the match and the injury to Gnerucci (forced out with a fractured tibia after a serious foul). Pisa lodged a complaint, which however was rejected.</string>
    <string name="bg3">1921-1957</string>
    <string name="bg3sub">Before and after the War</string>
    <string name="bg3isi">The disappointment of missing the scudetto was the culmination of a downward trend that led Pisa, at the end of the 1920s, to drop to the third series. In the meantime, the Arena Garibaldi, renamed Campo del Littorio, had been transformed into a modern and rational sports field capable of accommodating up to 7,000 spectators
Seasons followed with mixed results until the suspension, from 1943 to 1946, due to the Second World War. In the 1947-48 season Pisa finished Serie B one point behind Palermo, with the tournament not being approved due to strong suspicions of irregularities by the rosanero. However, the investigation was closed and Palermo was promoted to the detriment of Pisa. Once the first single-group Serie A vanished, within a few years the Nerazzurri found themselves in the IV Serie championship. On 5 December 1955, returning from the trip to Fabriano, the bus carrying Pisa had an accident in which many players were injured, therefore unable to continue the championship. The season ended with a relegation to the Promotion, the lowest point in the history of the Sporting Club. Two years later, on 2 June 1957, on the last day of the championship, second-placed Pisa faced league leaders Grosseto; the 1-0 victory granted the Nerazzurri their deserved return to the 4th Serie, two years before the club’s fiftieth anniversary.</string>
    <string name="bg4">1957-1978</string>
    <string name="bg4sub">The first Serie A, the fall and the foundations of the rebirth</string>
    <string name="bg4isi">After a series of seasons on and off, in the 1963-64 season Giuseppe Donati was elected president, who completely re-founded the team and club, bringing Pisa back to Serie B.
The 1967-68 season then marked the unexpected promotion to Serie A, which reached last day. The opportunity was tempting for a rapid renovation of the stadium, the ring of which was almost completely completed. However, the dream of the top flight lasted only a year: Pisa proved willing, but still too fragile for great football. The seventies saw Pisa slip back into the third series, under the Rota presidency: a long and difficult period with many corporate problems despite the effort of local entrepreneurs until a change that would profoundly mark history.</string>
    <string name="bg5">1978-1994</string>
    <string name="bg5sub">The Anconetani era</string>
    <string name="bg5isi">In 1978 a new era began for Pisan football: the club was purchased by Romeo Anconetani, who in just five years managed to bring Pisa back to Serie A (13 June 1982) after 13 years of waiting.
Romeo’s period was unquestionably the most successful, with 6 Serie A and 9 Serie B tournaments, 2 Mitropa Cups won, historic successes against the “big” teams and many excellent players seen under the tower, including those who were opponents of the most prestigious clubs in the top Italian football league. The 1990-91 season was the last in the Top League before a slow decline: after 3 anonymous Serie B championships and an unfortunate play-off in Salerno against Acireale lost on penalties, Pisa sank back to Serie C and few months later he was declared bankrupt.</string>
    <string name="bg6">1994-2009</string>
    <string name="bg6sub">The journey of Pisa Calcio</string>
    <string name="bg6isi">The ashes of the glorious Sporting Club were collected by Pisa Calcio, which however had to start again from the Eccellenza championship. Under the Gerbi-Posarelli management, Pisa managed to laboriously climb back up to Serie C1, winning an Italian Serie Cup and even coming close to promotion to the Cadetteria but also going through difficult periods.
    In 2002 the advent of the Gentili-Mian management with the Serie B immediately missed at the first attempt (playoff final lost in Bergamo against Albinoleffe) but with the following years marked by many disappointments. In 2005, Leonardo Covarelli from Perugia became President and after risking a sensational relegation to C2 in his first season as President (dramatic play-off win with Massese), in 2007 he managed to bring Pisa back to the Cadetteria after 13 years of waiting: The feat was achieved by the Nerazzurri led by Piero Braglia, victorious over Monza in an unforgettable playoff final with the return match played on the Arena lawn. The following year, Covarelli’s Pisa team seemed headed towards a sensational double leap with the team led by Mr. Ventura reaching the Playoff semi-final, losing in the double match against Lecce. As often happens in the history of Pisa, every peak reached is followed by a fall: the following year, in fact, Pisa passed into the hands of the Roman entrepreneur Luca Pomponi and after a season full of ups and downs and above all problems on the field and off the pitch they were relegated again to Serie C. A step backwards that pushed Pisa Calcio towards bankruptcy, the second for the Nerazzurri club in just 14 years.</string>
    <string name="bg7">2009-2016</string>
    <string name="bg7sub">The path of the A.C. Pisa 1909</string>
    <string name="bg7isi">From the ashes of Pisa Calcio AC Pisa 1909 was born, initially led by the couple Battini and Camilli, immediately protagonist and victorious in Serie D. In just 12 months, thanks also to a repechage, Pisa found itself again in the third series and shortly after passes entirely into the hands of the Pisan entrepreneur Carlo Battini.
    The Nerazzurri reached a category Italian Cup final (defeated against Spezia) and came close to returning to Serie B in 2013, losing out in the Playoff final against Latina. After various vicissitudes in 2015 the A.C. Pisa changes hands again and Fabrizio Lucchesi takes office as president, who a few months later (January 2016) is joined by the Roman entrepreneur Fabio Petroni: the many management difficulties do not prevent the Nerazzurri led by Gennaro Gattuso from achieving a sensational promotion to the series B at the end of a playoff final full of twists and turns against Foggia (June 2016). In the following season, however, off-field problems even risked causing Pisa to fail as they tried to defend themselves in the difficult Cadet championship. The city is loudly asking for a change of ownership to avoid the third, tragic, bankruptcy and after an exhausting and very complicated negotiation the dreams of all the fans are fulfilled.</string>
    <string name="bg8">2016-2021</string>
    <string name="bg8sub">Ma.Gi.Co Pisa is born and the Sporting Club returns</string>
    <string name="back">Back</string>
    <string name="coach">Alberto Gilardino</string>
    <string name="tanggal_lahir">Tanggal lahir: 5 Juli 1982 (umur 43)</string>
    <string name="tempat_lahir">Tempat lahir: Biella, Italia</string>
    <string name="gilardino_tinggi">Tinggi: 184 cm (6 ft 0 in)</string>
    <string name="gilardino_posisi">Posisi bermain: Striker</string>
    <string name="gilardino_klub">Informasi klub: Pelatih kepala Pisa (sejak 2025)</string>
    <string name="gilardino_judul_junior">Karier Junior</string>
    <string name="gilardino_junior1">• Cossatese</string>
    <string name="gilardino_junior2">• 1996–1997 Biellese</string>
    <string name="gilardino_junior3">• 1997–1999 Piacenza</string>
    <string name="gilardino_judul_senior">Karier Senior</string>
    <string name="gilardino_senior1">1999–2000 Piacenza — 17 penampilan (3 gol)</string>
    <string name="gilardino_senior2">2000–2002 Hellas Verona — 39 (5)</string>
    <string name="gilardino_senior3">2002–2005 Parma — 96 (50)</string>
    <string name="gilardino_senior4">2005–2008 AC Milan — 94 (36)</string>
    <string name="gilardino_senior5">2008–2012 Fiorentina — 118 (48)</string>
    <string name="gilardino_senior6">2012–2014 Genoa — 50 (19)</string>
    <string name="gilardino_senior7">2012–2013 → Bologna (pinjaman) — 36 (13)</string>
    <string name="gilardino_senior8">2014–2015 Guangzhou Evergrande — 14 (5)</string>
    <string name="gilardino_senior9">2015 → Fiorentina (pinjaman) — 14 (4)</string>
    <string name="gilardino_senior10">2015–2016 Palermo — 33 (10)</string>
    <string name="gilardino_senior11">2016–2017 Empoli — 14 (0)</string>
    <string name="gilardino_senior12">2017 Pescara — 3 (0)</string>
    <string name="gilardino_senior13">2017–2018 Spezia — 16 (6)</string>
    <string name="gilardino_total">Total: 544 pertandingan (199 gol)</string>
    <string name="gilardino_timnas_judul">Tim Nasional</string>
    <string name="gilardino_timnas1">Italia U-15</string>
    <string name="gilardino_timnas2">Italia U-16</string>
    <string name="gilardino_timnas3">Italia U-19</string>
    <string name="gilardino_timnas4">Italia U-21</string>
    <string name="gilardino_timnas5">Olimpiade Italia</string>
    <string name="gilardino_timnas6">Italia Senior — 57 caps / 19 gol</string>
    <string name="gilardino_pelatih_judul">Karier Kepelatihan</string>
    <string name="gilardino_pelatih1">2019 — Rezzato</string>
    <string name="gilardino_pelatih2">2019–2020 — Pro Vercelli</string>
    <string name="gilardino_pelatih3">2020–2021 — Siena</string>
    <string name="gilardino_pelatih4">2022–2024 — Genoa</string>
    <string name="gilardino_pelatih5">2025–sekarang — Pisa</string>
</resources>